# image-optimizer

./: .gitignore  Cargo.toml  DOCKER_README.md  DOCKER_SERVER_DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  prepare_docker_image.sh
src/: main.rs  optimizer.rs  utils.rs
static/: index.html  script.js  style.css
