[package]
name = "images-optimizer"
version = "0.1.0"
edition = "2021"
authors = ["Image Optimizer"]
description = "An application to optimize images similar to Telegram or WhatsApp"

[dependencies]
# Web server framework
axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "fs", "trace"] }
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }

# Image processing
image = "0.24"
oxipng = "8.0"
webp = "0.2"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
tempfile = "3.8"
bytes = "1.5"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.7"
anyhow = "1.0"
chrono = "0.4"
zip = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
